--- a/src/main/resources/fxml/Main.fxml
+++ b/src/main/resources/fxml/Main.fxml
@@ -6,14 +6,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="768.0" prefWidth="1024.0" 
-            xmlns="http://javafx.com/javafx/8" 
-            xmlns:fx="http://javafx.com/fxml/1" 
-            fx:controller="ru.kamikadze_zm.annoncertaskgenerator.MainController">
-   <children>
-      <ListView fx:id="lvAnnouncements" AnchorPane.bottomAnchor="50.0" 
-                AnchorPane.leftAnchor="0.0" 
-                AnchorPane.rightAnchor="0.0" 
-                AnchorPane.topAnchor="0.0" />
-   </children>
+<AnchorPane id="AnchorPane" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.kamikadze_zm.annoncertaskgenerator.MainController">
+    <children>
+        <ListView fx:id="lvAnnouncements" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+        <Button fx:id="saveBtn" onAction="#saveAndExit" prefHeight="40.0" text="Сохранить и выйти" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" />
+    </children>
 </AnchorPane>
