--- a/src/main/resources/styles/Styles.css
+++ b/src/main/resources/styles/Styles.css
@@ -1,3 +1,12 @@
 .button {
     -fx-font-weight: bold;
 }
+
+#announcement-box {
+    -fx-alignment: center;
+    -fx-spacing: 10;
+}
+
+#announcement-box #movie-name {
+    -fx-alignment: center-right;
+}
