--- a/src/main/resources/fxml/Announcement.fxml
+++ b/src/main/resources/fxml/Announcement.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="240.0" prefWidth="800.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.kamikadze_zm.announcertaskgenerator.AnnouncementController">
+<AnchorPane id="AnchorPane" prefHeight="240.0" prefWidth="800.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="xyz.pary.announcertaskgenerator.AnnouncementController">
     <stylesheets>
         <URL value="@/styles/Styles.css" />
     </stylesheets>
